--- a/StarterTemplate-master/Template/Pages/Index.cshtml
+++ b/StarterTemplate-master/Template/Pages/Index.cshtml
@@ -4,6 +4,9 @@
     ViewData["Title"] = "Home page";
 }
 
+
+<a asp-page="/admin/editsections">Link To Admin</a>
+
 <h1 edit="Title">Test Title</h1>
 <br/>
 <h1 edit="About">About Section</h1>
@@ -14,13 +17,13 @@
 <br />
 <h1 edit="MiscSection">Misc</h1>
 
-<p>Tities
+<p>Tittestestestestset
     </p>
 
 
 <h1 edit="OpenTimes">OpenTimes</h1>
 
-<h1 edit="Titletester2">Test Title 22</h1>
+<h1 edit="Titletester2">Test Title 2sdfdsfsdf2</h1>
 
 @Html.Partial("partial")
 
